--- a/client/src/components/templates/App/App.css
+++ b/client/src/components/templates/App/App.css
@@ -10,6 +10,14 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: #000;
+}
+
 .navbar {
   padding-left: 274px;
 }
