fix: sidebar item full size
made them full height and width

--- a/client/src/components/templates/App/App.css
+++ b/client/src/components/templates/App/App.css
@@ -26,3 +26,9 @@ a:visited {
   padding-left: 274px;
   padding-top: 10px
 }
+
+.sidebar__item {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
